--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
                     <li class="nav-item"><a href="#cursos" class="nav-link"><i class="fas fa-graduation-cap"></i> CURSOS</a></li>
                     <li class="nav-item"><a href="#sobre" class="nav-link"><i class="fas fa-info-circle"></i> SOBRE</a></li>
                     <li class="nav-item"><a href="#contato" class="nav-link"><i class="fas fa-envelope"></i> CONTATO</a></li>
-                    <li class="nav-item"><a href="https://allayprofissoes.github.io/allayprofissoes/" class="nav-link"><i class="fas fa-sign-in-alt"></i> ENTRAR</a></li>
+                    <li class="nav-item"><a href="login.html" class="nav-link"><i class="fas fa-sign-in-alt"></i> ENTRAR</a></li>
                 </ul>
             </div>
             <div class="menu-icon">
