--- a/certificado.html
+++ b/certificado.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Crimson+Text:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Fundo da página -->
+  <img src="background.svg" alt="Background" style="position:fixed; top:0; left:0; width:100%; height:100%; z-index:-1;" />
     <div class="certificate-container">
         <div class="certificate">
             <!-- Logo -->
