--- a/menualuno.html
+++ b/menualuno.html
@@ -412,7 +412,8 @@
                     </div>
                 </div>
 
-                <!-- Histórico de Indicações -->
+                <!-- Histórico de Indicações                   ATIVAR POSTERIOMENTE
+                 
                 <div class="referrals-section">
                     <div class="referrals-header">
                         <h3 class="referrals-title">
@@ -536,7 +537,7 @@
                         </table>
                     </div>
                 </div>
-
+-->
                 <!-- Regras do Programa -->
                 <div class="rules-section">
                     <div class="rules-header">
